[back][Modify]: schema 변경 user 와 게시글 연동
